# coinche-ai

./: .gitignore  pyproject.toml
src/: deck.py  game.py  game_rules.py  logger.py  main.py  main_ai.py  models.py
src/ai/: checkpoint.py  metrics.py  models.py  training.py
src/ai/monitoring/: __init__.py  monitor.py  parameter_stats.py  visualization.py
src/ai/training_metrics/: metrics.json
src/ai/utils/: __init__.py  experience.py  rewards.py
tests/: test_deck.py  test_game.py  test_game_rules.py
