[project]
name = "coinche-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.3",
    "pydantic>=2.10.2",
    "tabulate>=0.9.0",
    "torch>=2.5.1",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
pythonpath = "src"
